# Huffmanlzw

./: .coverage  .coveragerc  .gitignore  .pylintrc  pyproject.toml  readme.md
.github/workflows/: actions.yml  main.yml
documentation/: definition.md  implementation.md  test_document.md  user_guide.md  week1_report.md  week2_report.md  week3_report.md  week4_report.md  week5_report.md  week6_report.md
src/: .pylintrc  bit_converter.py  huffman.py  huffman_decoding.py  huffman_encoding.py  huffman_tree_node.py  main.py  test.txt  text.txt  text1000byt.txt
src/Huffman_compression/: huffman.py  huffman_decoding.py  huffman_encoding.py
src/LZW_compression/: LZW.py  LZW_decoding.py  LZW_encoding.py
src/Utils/: bit_converter.py
src/huffman/: huffman.py  huffman_encoding.py
src/huffman_compression/: huffman.py  huffman_decoding.py  huffman_encoding.py  huffman_tree_node.py
src/lzw_compression/: LZW.py  LZW_decoding.py  LZW_encoding.py  lzw.py  lzw_decoding.py  lzw_encoding.py
src/tests/: huffman_test.py  lzw_test.py  test_huffman.py  test_lzw.py  text.txt
src/utils/: bit_converter.py
