[tool.poetry]
name = "huffmanlzw"
version = "0.1.0"
description = ""
authors = ["Riku Brandt"]

[tool.poetry.dependencies]
python = "^3.9"
pylint = "^2.12.2"


[tool.poetry.dev-dependencies]
coverage = "^6.3"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
